<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment"
    >

  <TextView
      android:id="@+id/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/hana_code_test"
      android:textSize="18sp"
      android:gravity="center_horizontal"
      android:layout_marginTop="20dp"
      android:textStyle="bold"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="30dp"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:layout_below="@id/label"
      >


    <Button
        android:id="@+id/btnDownloadData1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/download_data_1"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnShowData1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_data_1"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnDownloadData2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/download_data_2"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnShowData2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_data_2"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_data"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_showLog"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_log"
        android:textAllCaps="false"
        />

  </LinearLayout>

</RelativeLayout>